Added a header to the notebook.

--- a/1. SEP -- Scraping the Data.ipynb
+++ b/1. SEP -- Scraping the Data.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "99e98132",
+   "metadata": {},
+   "source": [
+    "# Environment Check\n",
+    "\n",
+    "Make sure to select teh reelvant Kernel."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2bb50b2e",
+   "execution_count": 375,
+   "id": "4a1a6cfe",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "487bed35",
+   "id": "4f4366bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a35232",
+   "id": "e1abc130",
    "metadata": {},
    "source": [
     "# Playground"
@@ -88,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "f526f5bd",
+   "id": "f4019c14",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "ff192feb",
+   "id": "320bdf80",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "946fc37e",
+   "id": "c81e0347",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32bfb98f",
+   "id": "759913d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3aa422ed",
+   "id": "2c178469",
    "metadata": {
     "scrolled": false
    },
@@ -231,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e50bcc7e",
+   "id": "c4eb0835",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0fbcf3a1",
+   "id": "f7065365",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "83e33e7d",
+   "id": "9d5fd290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "54043260",
+   "id": "8d087057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9afa6ef0",
+   "id": "1b36b824",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9b7565d8",
+   "id": "22de42dd",
    "metadata": {},
    "outputs": [
     {
@@ -382,14 +392,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f94b42c",
+   "id": "1aae2594",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b201b071",
+   "id": "78b4ffc9",
    "metadata": {},
    "source": [
     "# Blueprint\n",
@@ -420,14 +430,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62eb825",
+   "id": "e223a9d9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3c06dab5",
+   "id": "ce9e0dc8",
    "metadata": {},
    "source": [
     "# 1. Get the urls"
@@ -436,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "b98aebcc",
+   "id": "d239790b",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "0ae35b17",
+   "id": "acdd76cb",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "ac16a89b",
+   "id": "b62fa6ff",
    "metadata": {
     "scrolled": true
    },
@@ -1527,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "de41018c",
+   "id": "da3614d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "c3969a23",
+   "id": "a73243dd",
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2568,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "b35f1a03",
+   "id": "dd4f25ba",
    "metadata": {},
    "outputs": [
     {
@@ -3580,7 +3590,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "873f6010",
+   "id": "62ae035e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3590,7 +3600,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "81c6923c",
+   "id": "98098daa",
    "metadata": {},
    "outputs": [
     {
@@ -4611,14 +4621,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc6bd00",
+   "id": "a10ee56e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d14b1791",
+   "id": "e71a5c5b",
    "metadata": {},
    "source": [
     "## Create the Dataframe"
@@ -4627,7 +4637,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "ccb6d8f3",
+   "id": "2f4b1bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4638,7 +4648,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "1e2676fa",
+   "id": "2a792bfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4648,7 +4658,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "19f9a7f7",
+   "id": "08a4ec2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4658,7 +4668,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "2eb499fe",
+   "id": "fa3d1ed3",
    "metadata": {},
    "outputs": [
     {
@@ -4764,7 +4774,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "a56a2519",
+   "id": "3b945251",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4784,7 +4794,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "77c133b3",
+   "id": "a6d41515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4795,7 +4805,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "cec8b93f",
+   "id": "4d806860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4805,7 +4815,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "fc46ce5f",
+   "id": "23f3507f",
    "metadata": {},
    "outputs": [
     {
@@ -5056,7 +5066,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ad84b2c9",
+   "id": "b66c7cba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5066,7 +5076,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "ac425ed0",
+   "id": "1a011403",
    "metadata": {},
    "outputs": [
     {
@@ -5087,7 +5097,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "ea5aa390",
+   "id": "72a3fa5f",
    "metadata": {},
    "outputs": [
     {
@@ -5338,14 +5348,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eff809c",
+   "id": "5f9bed52",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c96b8ae6",
+   "id": "14559aae",
    "metadata": {},
    "source": [
     "# 2. Scrape the Website"
@@ -5354,7 +5364,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "fce5a9fe",
+   "id": "528c08e9",
    "metadata": {},
    "outputs": [
     {
@@ -5410,7 +5420,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "b7c81c55",
+   "id": "e29cc1d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5420,7 +5430,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "4ff9733b",
+   "id": "a1f7214a",
    "metadata": {},
    "outputs": [
     {
@@ -5441,14 +5451,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "178c8a7d",
+   "id": "2e7c772c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cb7724c4",
+   "id": "7d1482f6",
    "metadata": {},
    "source": [
     "# 3. Basic Data Cleaning"
@@ -5457,7 +5467,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "f539e01b",
+   "id": "2f2375cd",
    "metadata": {},
    "outputs": [
     {
@@ -5653,7 +5663,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "4b14b94d",
+   "id": "00a89fcc",
    "metadata": {
     "scrolled": true
    },
@@ -5773,7 +5783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a6a7469",
+   "id": "b829bf73",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5781,7 +5791,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "a79915ac",
+   "id": "848b631c",
    "metadata": {},
    "outputs": [
     {
@@ -7632,7 +7642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd2515c",
+   "id": "adef056e",
    "metadata": {},
    "source": [
     "## Feature Engineer `Author`"
@@ -7641,7 +7651,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "6399f67a",
+   "id": "e0c49f2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7681,7 +7691,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "bf50193d",
+   "id": "50177e17",
    "metadata": {},
    "outputs": [
     {
@@ -8036,7 +8046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c161408",
+   "id": "b107c75e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8044,7 +8054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c1df86",
+   "id": "77342b0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8052,7 +8062,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "c0decd43",
+   "id": "c619d9d5",
    "metadata": {},
    "outputs": [
     {
@@ -8073,7 +8083,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "dfa20d68",
+   "id": "bcd529ea",
    "metadata": {},
    "outputs": [
     {
@@ -8105,7 +8115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87db957",
+   "id": "586e872b",
    "metadata": {},
    "source": [
     "## Feature Engineer  `Date`"
@@ -8114,7 +8124,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "2d6e2d91",
+   "id": "0bc39067",
    "metadata": {},
    "outputs": [
     {
@@ -9953,7 +9963,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "eeb2acec",
+   "id": "4e7e13e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9981,7 +9991,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "0abe3aca",
+   "id": "6cd75de2",
    "metadata": {},
    "outputs": [
     {
@@ -10015,7 +10025,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "3400b283",
+   "id": "c14cb331",
    "metadata": {},
    "outputs": [
     {
@@ -10039,7 +10049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6696ac",
+   "id": "94e1dd29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10050,7 +10060,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "f7b76ecc",
+   "id": "06e40c0a",
    "metadata": {},
    "outputs": [
     {
@@ -10072,7 +10082,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "c609ee1d",
+   "id": "02b11c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10082,7 +10092,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "6b5c194b",
+   "id": "82d25c14",
    "metadata": {},
    "outputs": [
     {
@@ -10437,7 +10447,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "37ad21e0",
+   "id": "b2653078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10447,14 +10457,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7766b2",
+   "id": "702c7b5c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f047bc6d",
+   "id": "5837d834",
    "metadata": {},
    "source": [
     "## Getting `BibTeX`"
@@ -10463,7 +10473,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "721834da",
+   "id": "aecbfbd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10473,7 +10483,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "7b7236fd",
+   "id": "f91cc5c6",
    "metadata": {},
    "outputs": [
     {
@@ -10676,7 +10686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d04d4cf3",
+   "id": "4c832408",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10684,7 +10694,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "0cd63456",
+   "id": "fc93dbe8",
    "metadata": {},
    "outputs": [
     {
@@ -10702,7 +10712,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "680827b5",
+   "id": "d5771970",
    "metadata": {},
    "outputs": [
     {
@@ -10735,7 +10745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9830b348",
+   "id": "9999fe20",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -10743,7 +10753,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "6bea148f",
+   "id": "0a6b3da1",
    "metadata": {},
    "outputs": [
     {
@@ -11123,7 +11133,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "id": "57493228",
+   "id": "b1b53b35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11157,7 +11167,7 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "id": "eed02419",
+   "id": "2df84031",
    "metadata": {},
    "outputs": [
     {
@@ -11219,7 +11229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53312b28",
+   "id": "bee2ec15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11227,7 +11237,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
-   "id": "a5cf3e55",
+   "id": "7885ec06",
    "metadata": {},
    "outputs": [
     {
@@ -11619,8 +11629,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 308,
+   "id": "9e68390b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"BibTeX Citation String (Current Version in Summer 2021 Archive)There are over 50 BibTeX styles and no standard format that is guaranteed to work for all 50.  So, we suggest you use our string as a 'useful suggestion' that might need to be adapted for your particular BibTeX file. Also note that the double braces around the title is to preserve capitalization. You may wish to edit that as well.@InCollection{sep-abu-bakr-al-razi,\\n\\tauthor       =\\t{Adamson, Peter},\\n\\ttitle        =\\t{{Abu Bakr al-Razi}},\\n\\tbooktitle    =\\t{The {Stanford} Encyclopedia of Philosophy},\\n\\teditor       =\\t{Edward N. Zalta},\\n\\thowpublished =\\t{\\\\url{https://plato.stanford.edu/archives/sum2021/entries/abu-bakr-al-razi/}},\\n\\tyear         =\\t{2021},\\n\\tedition      =\\t{{S}ummer 2021},\\n\\tpublisher    =\\t{Metaphysics Research Lab, Stanford University}\\n}\\n\\n\""
+      ]
+     },
+     "execution_count": 308,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bibtex"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 368,
-   "id": "5c5c6ebf",
+   "id": "b6d6632c",
    "metadata": {},
    "outputs": [
     {
@@ -11642,7 +11673,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "7df14405",
+   "id": "52b1a0f2",
    "metadata": {},
    "outputs": [
     {
@@ -11870,7 +11901,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "eb05b0a9",
+   "id": "8c3f2640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11880,7 +11911,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "861e3641",
+   "id": "7f6c2f8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11890,7 +11921,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "be2a088d",
+   "id": "dd868de8",
    "metadata": {},
    "outputs": [
     {
