added a link to reranking best practices.

--- a/2. Naive RAG and RAG+Reranking -- naive-rag-chunk400-text-embedding-3-small-cos.ipynb
+++ b/2. Naive RAG and RAG+Reranking -- naive-rag-chunk400-text-embedding-3-small-cos.ipynb
@@ -5036,7 +5036,8 @@
     "- Reranking the reranked results with a different reranking model seems to get some more interesting results closer to top; what do you think?\n",
     "- We should test to see how different chunk sizes will affect the results, with or witthout rerank. It seems that larger chunks would have more context in them and the retrieved docs will be more relevant in general.\n",
     "- We should test to see how other embedding models help with the results, particularly `text-embedding-3-large` and `embed-english-v3.0`. I'm expecting that at least `text-embedding-3-large` will improve the results, particularly with some chunk sizes of more than 400.\n",
-    "- Let's check later how the Advanced RAG notebook makes use of rerankers -- maybe I'm not doing it right."
+    "- Let's check later how the Advanced RAG notebook makes use of rerankers -- maybe I'm not doing it right.\n",
+    "- Reranking best practices: https://docs.cohere.com/docs/reranking-best-practices"
    ]
   },
   {
