--- a/4. RAG with Multiquerying.ipynb
+++ b/4. RAG with Multiquerying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "344ac5f4",
+   "id": "a03d9013",
    "metadata": {},
    "source": [
     "# Setting up Tokenizer"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "696d3d1c",
+   "id": "869980c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "13056a9a",
+   "id": "282470fe",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f690ba",
+   "id": "f61057e3",
    "metadata": {},
    "source": [
     "# Setting up Embedding Model"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "052bf444",
+   "id": "84551886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b6c55ce0",
+   "id": "57976ad0",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af164d2d",
+   "id": "463e4974",
    "metadata": {},
    "source": [
     "# Connecting to Database"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b3aafdc",
+   "id": "a45b072b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d0172aab",
+   "id": "55ee5bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bd9fda69",
+   "id": "19f533bc",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "82e187b6",
+   "id": "ead3ff9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "60539076",
+   "id": "6a179007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62828c22",
+   "id": "19dd6491",
    "metadata": {},
    "source": [
     "# Setting up Generation Model"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "14ebfe01",
+   "id": "18f1bd81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8197cd4",
+   "id": "844a22ad",
    "metadata": {},
    "source": [
     "# Setting up the `MultiQueryRetriever` Chain"
@@ -213,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "002ae550",
+   "execution_count": 164,
+   "id": "69682b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "9cb1a224",
+   "id": "db9c6640",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "6a4675f4",
+   "id": "77382db7",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "a85d7d7e",
+   "id": "45c83fbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "a14ca2a4",
+   "execution_count": 165,
+   "id": "51cf44e4",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "5"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "7045d8eb",
+   "execution_count": 166,
+   "id": "f40d54c1",
    "metadata": {
     "scrolled": true
    },
@@ -332,7 +332,7 @@
        " Document(page_content='That debate has had to confront the fact that Socrates did not\\nactually disobey his own death sentence with which his trial\\nconcluded: when the time came, he drank the poisonous hemlock as\\nprescribed by the jury. Before that moment, Plato imagines Socrates\\nbeing visited in prison by his friend Crito (in a dialogue which bears\\nthe latter’s name), and urged to escape for the sake of his\\nfriends and family, a practice which was frequently tolerated in\\nAthens so long as the escapee fled into exile. Socrates is not\\npersuaded by Crito’s arguments. He begins his examination of\\nthem by recalling principles to which he and Crito had in the past\\nagreed, including the principle that it is better to suffer injustice\\nthan to commit it (Cri. 47a–50a). He then goes on to\\nventriloquize a series of speeches against escape, which he ascribes\\nto the “Laws of\\n Athens”.[6]\\n These speeches articulate a set of special connections between\\nSocrates and the Laws of Athens which, depending on one’s\\nreading, either flesh out the principle that it is better to suffer\\ninjustice than to do it (by dramatizing reasons for which it would\\nunjust for Socrates to escape), or else stand in tension with it by\\ninvoking absolutist grounds with implications more extensive than such\\na principle would authorize (Harte 1999). On any reading, it is\\nimportant to bear in mind that Socrates is choosing to obey a jury\\nverdict that has commanded him to suffer what is arguably an\\ninjustice, but not to commit one, so that one of his fundamental\\nethical principles here as elsewhere in Plato (that it is better to\\nsuffer an injustice than to commit one) is at least compatible with\\nhis acceptance of the jury’s sentence.', metadata={'article_id': '75', 'authors': ['Melissa Lane --- mslane@princeton.edu'], 'chunk': 17.0, 'citation': 'https://plato.stanford.edu/cgi-bin/encyclopedia/archinfo.cgi?entry=ancient-political', 'date': '2023', 'source': 'https://plato.stanford.edu/archives/spr2024/entries/ancient-political/', 'title': 'Ancient Political Philosophy'})]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811addda",
+   "id": "7072eafe",
    "metadata": {},
    "source": [
     "### Costumzing the prompt: "
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c94f52",
+   "id": "6480a754",
    "metadata": {},
    "source": [
     "#### My own version"
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "0a10710f",
+   "id": "f9506c9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "783096ed",
+   "id": "e75aca7b",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "82f49f7b",
+   "id": "07c12545",
    "metadata": {
     "scrolled": true
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d4839d",
+   "id": "83ee0fcd",
    "metadata": {},
    "source": [
     "#### LangChain's Version"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "f23a9ee6",
+   "id": "84ce4ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "7450f591",
+   "id": "cb25d246",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "9262b7ef",
+   "id": "b0287f04",
    "metadata": {
     "scrolled": true
    },
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "bf899028",
+   "id": "63e97c92",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "d7b1d935",
+   "id": "1192ebe4",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83f41167",
+   "id": "b0e7c674",
    "metadata": {},
    "source": [
     "# Adding a Generation in RAG"
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "d07435b2",
+   "id": "6d61d2b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "84b41080",
+   "id": "95d754dc",
    "metadata": {
     "scrolled": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "cbbdb38b",
+   "id": "6307b7a8",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "36881f38",
+   "id": "82d2ac60",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd37ac64",
+   "id": "7f996f5c",
    "metadata": {},
    "source": [
     "The text provided includes distinct portions that directly correspond to some of the 6 provided documents using the multiretriever (`docs`). By analyzing the content of each document and comparing it to the segments in the main text, we can identify the specific documents that were directly incorporated:\n",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aba7e888",
+   "id": "45647fc6",
    "metadata": {},
    "source": [
     "# Chaining Everything with a SequentialChain"
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81e308a",
+   "id": "1fa7d547",
    "metadata": {},
    "source": [
     "We can pull together the logic above into a function or set of methods, whatever is prefered — however if we'd like to use LangChain's approach to this we must \"chain\" together multiple chains. The first retrieval component is (1) not a chain per se, and (2) requires processing of the output. To do that, and fit with LangChain's \"chaining chains\" approach, we setup the _retrieval_ component within a `TransformChain`:"
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "4557fa68",
+   "id": "e6776c71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf1d0506",
+   "id": "c4fcfbf5",
    "metadata": {},
    "source": [
     "Now we chain this with our generation step using the `SequentialChain`:"
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "509dd383",
+   "id": "d6b5790e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "8058fc04",
+   "id": "70c86e73",
    "metadata": {
     "scrolled": true
    },
@@ -904,19 +904,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "34217959",
+   "execution_count": 162,
+   "id": "f4ab0e11",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fd3a5b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"It is probably true that in mainstream fifth century Greek culture,\\nbelief in an afterlife of the soul was weak and unclear (Claus 1981,\\n68; Burnet 1916, 248-9). If so, it is fitting that Socrates' arguments\\nfor the immortality of the soul, most prominently in the\\nPhaedo, are offered to interlocutors who, at the outset of the\\ndiscussion, are by no means convinced of the idea. (In fact, in the\\nApology, 40c, Socrates himself is presented as being\\nnoncommittal about what happens to the soul at death, and even about\\nwhether it survives at all.) “Men find it very hard to\\nbelieve”, Cebes says at Phaedo 70a, “what you said\\nabout the soul. They think that after it has left the body it no\\nlonger exists anywhere, but that it is destroyed and dissolved on the\\nday the man dies.” This view is restated by Simmias (at 77b) as\\nthe opinion of the majority (cf. 80d); note that the view includes the\\nidea that the soul is a material thing, and is destroyed by being\\ndispersed, “like breath or smoke” (70a). Glaucon, in the\\nlast book of the Republic (608d), is taken aback by\\nSocrates' question,\\n\\n\\n“Haven't you realized that our soul is immortal and never\\ndestroyed?”\\n\\nHe looked at me with wonder and said: “No, by god, I\\nhaven't. Are you really in a position to assert that?”\\n---\\nis not truly imperishable, there can be no guarantee that it will\\nsurvive Socrates' impending death. For it might have experienced any\\nnumber of incarnations already, and the current one might be its\\nlast. So Socrates launches his most elaborate and final argument for\\nthe immortality of the soul, which concludes that since life belongs\\nto soul essentially, the soul must be deathless — that is,\\nimmortal.\\n---\\nMoreover, apart from the question of immortality or otherwise, there\\nis the further question whether the soul, if it does have some form of\\nexistence after the person has died, “still possesses some power\\nand wisdom” (Phaedo, 70b; cf. 76c).  Answering both\\nquestions, Socrates says not only that the soul is immortal, but also\\nthat it contemplates truths after its separation from the body at the\\ntime of death. Needless to say, none of the four main lines of\\nargument that Socrates avails himself of succeeds in establishing the\\nimmortality of the soul, or in demonstrating that disembodied souls\\nenjoy lives of thought and intelligence. The arguments have been\\ndiscussed in some detail, for instance in Bostock 1986, and for our\\npurposes there is no need to state and analyze them systematically. It\\nwill suffice to comment selectively on aspects of the arguments that\\nbear directly on Plato's conception of the soul. The argument that\\nsheds most light on what Plato takes the nature of the soul to be is\\nthe affinity argument (78b-80b). This argument confronts head-on the\\nwidespread worry that the soul, at or soon after death, is destroyed\\nby being dispersed.  It begins by distinguishing between two kinds of\\nthings: on the one hand, things that are perceptible, composed of\\nparts, and subject to dissolution and destruction; on the other hand,\\nthings that are not perceptible, but intelligible (grasped by\\nthought), not composed of parts, and exempt from dissolution and\\ndestruction. These two categories are obviously mutually exclusive. It\\nis not clear whether or not they are meant to be exhaustive.\\nMoreover, the category of imperishable, intelligible being is\\n---\\nSocrates offers in the Phaedo, the soul is immortal because it\\nhas life essentially, the way fire has heat essentially. It is plain\\nthat both of these arguments apply to the souls of all living things,\\nincluding plants (cf. 70d, 71d). And in the final argument, Socrates\\nexplicitly appeals to the idea that it is the soul that animates the\\nbody of a living thing (105c):\\n---\\nThat debate has had to confront the fact that Socrates did not\\nactually disobey his own death sentence with which his trial\\nconcluded: when the time came, he drank the poisonous hemlock as\\nprescribed by the jury. Before that moment, Plato imagines Socrates\\nbeing visited in prison by his friend Crito (in a dialogue which bears\\nthe latter’s name), and urged to escape for the sake of his\\nfriends and family, a practice which was frequently tolerated in\\nAthens so long as the escapee fled into exile. Socrates is not\\npersuaded by Crito’s arguments. He begins his examination of\\nthem by recalling principles to which he and Crito had in the past\\nagreed, including the principle that it is better to suffer injustice\\nthan to commit it (Cri. 47a–50a). He then goes on to\\nventriloquize a series of speeches against escape, which he ascribes\\nto the “Laws of\\n Athens”.[6]\\n These speeches articulate a set of special connections between\\nSocrates and the Laws of Athens which, depending on one’s\\nreading, either flesh out the principle that it is better to suffer\\ninjustice than to do it (by dramatizing reasons for which it would\\nunjust for Socrates to escape), or else stand in tension with it by\\ninvoking absolutist grounds with implications more extensive than such\\na principle would authorize (Harte 1999). On any reading, it is\\nimportant to bear in mind that Socrates is choosing to obey a jury\\nverdict that has commanded him to suffer what is arguably an\\ninjustice, but not to commit one, so that one of his fundamental\\nethical principles here as elsewhere in Plato (that it is better to\\nsuffer an injustice than to commit one) is at least compatible with\\nhis acceptance of the jury’s sentence.\""
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs = out2['contexts']\n",
+    "docs"
+   ]
   }
  ],
  "metadata": {
